--- a/frontend/trello-gui/package.json
+++ b/frontend/trello-gui/package.json
@@ -30,6 +30,7 @@
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
     "react-use": "^17.6.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.88.0",
     "tippy.js": "^6.3.7",
     "web-vitals": "^2.1.4"
